# ai-partner

./: .gitignore  CLAUDE.md  TODOS.md  package.json  pnpm-lock.yaml
docs/: ai-desktop-partner-animation-resolver-design.md  ai-desktop-partner-asset-preparation-guide.md  ai-desktop-partner-business-requirements.md  ai-desktop-partner-engineering-implementation-plan.md  ai-desktop-partner-tauri-feasibility.md  ai-desktop-pet-business-requirements.md  m0-window-spike.md  mvp-internal-beta-distribution.md  mvp-release-handoff.md
docs/plans/: 2026-07-13-current-action-summary-design.md  2026-07-13-current-action-summary.md
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  AppDragResolverBoundary.test.ts  AppProductUiBoundary.test.ts  animationIntentView.test.ts  animationIntentView.ts  companionSelector.test.ts  companionSelector.ts  debugMode.test.ts  debugMode.ts  defaultAtlas.test.ts  defaultAtlas.ts  layoutSanity.test.ts  partnerStateView.test.ts  partnerStateView.ts  petdexRealAssetSmoke.test.ts  physicalStateMachine.test.ts  physicalStateMachine.ts  spriteProbe.test.ts  spriteProbe.ts  spriteRenderer.test.ts  spriteRenderer.tsx  styles.css  tauriWindow.test.ts  tauriWindow.ts  theme.test.ts  theme.ts
scripts/: check-macos-package-config.mjs  install-codex-hooks.mjs  package-macos-dmg.mjs  partner.mjs  sync-partner-skill.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: m0-window-spike.json
src-tauri/src/: companions.rs  ingress.rs  lib.rs  main.rs  state.rs
src-tauri/tests/: contracts_fixtures.rs
(+2 files in other folders)
